manifests/backend/eventstore/state/20-es-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eventstore-cluster
spec:
  selector:
    matchLabels:
      app: eventstore-cluster
  replicas: 3  ## Must match EVENTSTORE_CLUSTER_SIZE
  serviceName: eventstore-cluster
  template:
    metadata:
      labels:
        app: eventstore-cluster  
    spec:      

      # Allow non-root user to access persistent volume https://github.com/EventStore/EventStore/issues/2808
      securityContext:
        # fsGroup: 2000
        runAsUser: 0  # Run as root https://stackoverflow.com/questions/48406516/run-container-as-root-user (because writer.chk fail)
      
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - eventstore-cluster
              topologyKey: kubernetes.io/hostname


      containers:
        - name: eventstore
          image: eventstore/eventstore
          ports:
            - containerPort: 2113
              name: eventstore-web
            - containerPort: 2114
            - containerPort: 1111
            - containerPort: 1112 
            - containerPort: 1113
              name: eventstore-tcp
            - containerPort: 2112
              name: gossip

          livenessProbe:
            httpGet:
              path: /
              port: 2113
            initialDelaySeconds: 5
            periodSeconds: 5

          volumeMounts:
            - mountPath: /usr/data/eventstore-db
              name: eventstore-data
            - mountPath: /usr/data//eventstore-index
              name: eventstore-index
            - mountPath: /usr/data//eventstore-log
              name: eventstore-log
          
          securityContext:
            allowPrivilegeEscalation: false

  volumeClaimTemplates:
  - metadata:
      name: eventstore-data
    spec:
      selector:
        matchLabels:
          volume: es-data-vol
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: es-retain
      resources:
        requests:
          storage: 10Gi 
  - metadata:
      name: eventstore-index
    spec:
      selector:
        matchLabels:
          volume: es-index-vol
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: es-retain
      resources:
        requests:
          storage: 10Gi 
  - metadata:
      name: eventstore-log
    spec:
      selector:
        matchLabels:
          volume: es-log-vol
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: es-retain
      resources:
        requests:
          storage: 10Gi
