manifests/backend/eventstore/state/18-es-services.yaml
kind: Service  
apiVersion: v1  
metadata:  
  name: eventstore-cluster
  labels:
    app: eventstore-cluster
spec:  
  clusterIP: None
  selector:
    app: eventstore-cluster
  ports:
    - port: 2113
      name: eventstore-web
    - port: 1113
      name: eventstore-tcp
    - port: 2112
      name: gossip
---
apiVersion: v1
kind: Service
metadata:
  name: eventstore-admin
  labels:
    app: eventstore-cluster
spec:
  type: NodePort
  selector:
    app: eventstore-cluster
  ports:
    - name: admin-ui
      protocol: TCP
      port: 8085
      targetPort: 2113
      # nodePort: 30091
