manifests/backend/eventstore/state/60-es-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es-ngrs
  annotations:
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: es.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: eventstore-cluster
              port: 
                number: 2113
